[package]
name = "tn-network"
version.workspace = true
license = "Apache-2.0"
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steven Stanfield <steve@telcoin.org>",
    "Mysten Labs <build@mystenlabs.com>",
]
edition = "2021"
publish = false

[dependencies]
dashmap = { workspace = true }
backoff = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
quinn-proto = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
tokio = { workspace = true, features = ["rt", "net", "sync", "macros", "time"] }
tracing = { workspace = true }
tn-types = { workspace = true }
tn-utils = { workspace = true }
consensus-metrics = { workspace = true }
tn-network-types = { workspace = true }

anemo = { workspace = true }
anemo-tower = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
tower = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
eyre = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tn-test-utils = { workspace = true }

[features]
test-utils = []
