[package]
name = "tn-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steven Stanfield <steve@telcoin.org>",
    "Mysten Labs <build@mystenlabs.com>",
]

[dependencies]
cfg-if = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
reth-node-ethereum = { workspace = true }
url = { version = "2.3.1", optional = true }
axum = { workspace = true }
enr = { workspace = true, default-features = false, features = [
    "rust-secp256k1",
] }

fastcrypto = { workspace = true }
tn-executor = { workspace = true }
tn-node-traits = { workspace = true }
tn-network = { workspace = true }
tn-primary = { workspace = true }
prometheus = { workspace = true }
tn-storage = { workspace = true }
tn-types = { workspace = true }
tn-config = { workspace = true }
tn-network-types = { workspace = true }
tn-worker = { workspace = true }
tn-rpc = { workspace = true }
eyre = { workspace = true }

consensus-metrics = { workspace = true }
tn-primary-metrics = { workspace = true }

anemo = { workspace = true }
reqwest = { workspace = true }
dirs-next = "2.0.0"

# engine
reth = { workspace = true }
reth-beacon-consensus = { workspace = true }
reth-blockchain-tree = { workspace = true }
reth-config = { workspace = true }
reth-db = { workspace = true }
reth-db-common = { workspace = true }
reth-trie-db = { workspace = true }
reth-evm = { workspace = true }
reth-provider = { workspace = true }
reth-stages = { workspace = true }
reth-exex = { workspace = true }
reth-node-events = { workspace = true }
reth-transaction-pool = { workspace = true }
reth-static-file = { workspace = true }
reth-ethereum-payload-builder = { workspace = true }
tn-engine = { workspace = true }
tn-batch-builder = { workspace = true }
tn-batch-validator = { workspace = true }
jsonrpsee = { workspace = true }
fdlimit = { workspace = true }

# added during upgrade to beta.3
reth-basic-payload-builder = { workspace = true }
reth-network = { workspace = true }
reth-network-peers = { workspace = true }
reth-chainspec = { workspace = true }
reth-node-builder = { workspace = true }
reth-payload-builder = { workspace = true }
reth-network-api = { workspace = true }
reth-discv4 = { workspace = true }
reth-eth-wire = { workspace = true }

# TODO: temporary solution until reth supports public rpc hooks
tn-faucet = { workspace = true }

[dev-dependencies]
serde-reflection = { workspace = true }
serde_yaml = { workspace = true }
tn-test-utils = { workspace = true }
tn-network = { workspace = true, features = ["test-utils"] }
tn-primary = { workspace = true }
assert_matches = { workspace = true }
tempfile = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
