[package]
name = "tn-test-utils"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steven Stanfield <steve@telcoin.org>",
    "Mysten Labs <build@mystenlabs.com>",
]
publish = false

[dependencies]
fdlimit = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
tonic = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }

fastcrypto = { workspace = true }
tn-network = { workspace = true }
tn-network-types = { workspace = true }
tn-node = { workspace = true }
tn-primary = { workspace = true }
tn-types = { workspace = true }
tn-faucet = { workspace = true }
tn-config = { workspace = true }
tn-worker = { workspace = true }
consensus-metrics = { workspace = true }
tn-primary-metrics = { workspace = true }
reth-chainspec = { workspace = true }
reth-cli-commands = { workspace = true }
secp256k1 = { workspace = true }
reth-tasks = { workspace = true }

anemo = { workspace = true }

# execution
eyre = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-stages = { workspace = true }
reth-primitives = { workspace = true }
tn-batch-builder = { workspace = true }
tn-batch-validator = { workspace = true }
tn-engine = { workspace = true }
reth = { workspace = true }
reth-db = { workspace = true, features = ["test-utils"] }
reth-transaction-pool = { workspace = true }
jsonrpsee = { workspace = true }
clap = { workspace = true, features = ["env"] }
tn-storage = { workspace = true }
telcoin-network = { path = "../../bin/telcoin-network" }
reth-evm = { workspace = true }
alloy = { workspace = true, features = [
    "contract",
    "signers",
    "signer-local",
    "network",
] }
tracing-subscriber = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
futures.workspace = true
