[package]
name = "tn-reth"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steven Stanfield <steve@telcoin.org>",
    "Markus Osterlund <markus@telcoin.org>",
]
publish = false

[dependencies]
jsonrpsee = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
tn-config = { workspace = true }
tn-types = { workspace = true }
dirs-next = "2.0.0"
enr = { workspace = true, default-features = false, features = [
    "rust-secp256k1",
] }

reth = { workspace = true }
reth-db = { workspace = true }
reth-db-common = { workspace = true }
reth-node-core = { workspace = true }
reth-node-ethereum = { workspace = true }
reth-stages = { workspace = true }
reth-chainspec = { workspace = true }
reth-cli-util = { workspace = true }
reth-primitives = { workspace = true }
reth-consensus = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-engine-primitives = { workspace = true }
reth-revm = { workspace = true }
reth-evm = { workspace = true }
reth-node-builder = { workspace = true }
reth-provider = { workspace = true }
reth-trie-db = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-transaction-pool = { workspace = true }

reth-blockchain-tree = { workspace = true }
reth-errors = { workspace = true }
reth-rpc-eth-types = { workspace = true }

reth-network-peers = { workspace = true }
reth-network-api = { workspace = true }
reth-discv4 = { workspace = true }
reth-eth-wire = { workspace = true }
reth-tracing = { workspace = true }

rand_chacha = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "signal"] }
tracing = { workspace = true }
eyre = { workspace = true }
alloy = { workspace = true, features = ["genesis"] }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
