[package]
name = "tn-types"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
authors = [
    "Grant Kee <grant.kee@telco.in>",
    "Mysten Labs <build@mystenlabs.com>",
    "Steven Stanfield <steve@telcoin.org>",
]
publish = false

[dependencies]
base64 = { workspace = true }
bcs = { workspace = true }
bincode = { workspace = true }
reth-payload-primitives = { workspace = true }
reth-primitives = { workspace = true }
reth-chainspec = { workspace = true }
reth-consensus = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-revm = { workspace = true }
reth-rpc-types = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
roaring = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
humantime-serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
tracing = { workspace = true }
eyre = { workspace = true }
fastcrypto = { workspace = true, features = ["copy_key"] }
fastcrypto-tbls = { workspace = true }
anemo = { workspace = true }
once_cell = { workspace = true }
match_opt = { workspace = true }
multiaddr = { workspace = true }
telcoin-sync = { workspace = true }
alloy-rlp = { workspace = true }
parking_lot = { workspace = true }
serde_yaml = { workspace = true }
secp256k1 = { workspace = true }
alloy = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
