[package]
name = "tn-types"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steven Stanfield <steve@telcoin.org>",
    "Markus Osterlund <markus@telcoin.org>",
    "Mysten Labs <build@mystenlabs.com>",
]
publish = false

[dependencies]
base64 = { workspace = true }
bcs = { workspace = true }
bincode = { workspace = true }
reth-payload-primitives = { workspace = true }
reth-primitives = { workspace = true }
reth-chainspec = { workspace = true }
reth-consensus = { workspace = true }
reth-evm-ethereum = { workspace = true }
reth-engine-primitives = { workspace = true }
reth-revm = { workspace = true }
reth-tasks = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
roaring = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt", "macros", "signal"] }
tracing = { workspace = true }
eyre = { workspace = true }
fastcrypto = { workspace = true, features = ["copy_key"] }
fastcrypto-tbls = { workspace = true }
once_cell = { workspace = true }
match_opt = { workspace = true }
multiaddr = { workspace = true }
tn-utils = { workspace = true }
alloy-rlp = { workspace = true }
parking_lot = { workspace = true }
serde_yaml = { workspace = true }
secp256k1 = { workspace = true }
libp2p = { workspace = true }
bs58 = { workspace = true }
blake2 = { workspace = true }
alloy = { workspace = true, features = ["genesis"] }

[dev-dependencies]
tempfile = { workspace = true }
