[package]
name = "tn-keys"
version.workspace = true
authors = ["Grant Kee <grant.kee@telco.in>", "Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.64"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.88"
signature = "1.6.0"
rand = "0.8.5"
tiny-bip39 = "1.0.0"
bip32 = "0.4.0"
slip10_ed25519 = "0.1.3"
fastcrypto = { workspace = true, features = ["copy_key"] }
tn-types.workspace = true
# 

[dev-dependencies]
tempfile = "3.3.0"
