[package]
name = "tn-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
fastcrypto = { workspace = true }
narwhal-network = { workspace = true }
narwhal-typed-store = { workspace = true }
narwhal-storage = { workspace = true }
tn-types = { workspace = true }
eyre = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }


[dev-dependencies]
