[package]
name = "consensus-metrics"
version = "0.1.0"
authors = ["Grant Kee <grant.kee@telco.in>", "Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
# 
tn-tracing.workspace = true
anyhow.workspace = true
protobuf = "^2.0"
scopeguard = "1"
prometheus = "0.13"
once_cell = "1"
tap = "1.0"
tokio = { version = "1", features = ["full", "test-util", "tracing"] }
dashmap = "5.4.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"]}
parking_lot = "0.12.1"
futures = "0.3.23"
async-trait = "0.1.61"
