[package]
name = "lattice-consensus"
version.workspace = true
license = "Apache-2.0"
authors = ["Grant Kee <grant.kee@telco.in>", "Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = false

[dependencies]
arc-swap = { version = "1.5.1", features = ["serde"] }
bcs = "0.1.4"
match_opt = "0.1.2"
rand = { version = "0.8.5", optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing = "0.1.36"
prometheus = "0.13.3"


fastcrypto.workspace = true

lattice-storage.workspace = true
tn-types.workspace = true
# 
cfg-if = "1.0.0"
consensus-metrics.workspace = true
lattice-typed-store.workspace = true

[dev-dependencies]
bincode = "1.3.3"
criterion = "0.4.0"
futures = "0.3.24"
indexmap = { version = "1.9.2", features = ["serde"] }
lattice-test-utils.workspace = true
lattice-node.workspace = true
tn-types = { workspace = true, features = ["test"] }

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.11.0", features = ["criterion", "flamegraph"]}

[features]
default = ["rand"]
benchmark = []
pprof = []

[lib]
bench = false

[[bench]]
name = "process_certificates"
harness = false
required-features = ["benchmark", "pprof"]
