[package]
name = "narwhal-executor"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
authors = [
    "Grant Kee <grant.kee@telco.in>",
    "Mysten Labs <build@mystenlabs.com>",
]
publish = false

[dependencies]
async-trait.workspace = true
reth-primitives = { workspace = true }
fastcrypto.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tonic.workspace = true
tracing.workspace = true
prometheus.workspace = true
narwhal-storage = { workspace = true }
narwhal-network-types = { workspace = true }

tn-types = { workspace = true }
narwhal-network = { workspace = true }
mockall.workspace = true

consensus-metrics.workspace = true
narwhal-typed-store = { workspace = true }

[dev-dependencies]
indexmap.workspace = true
tempfile.workspace = true
narwhal-primary = { workspace = true }
tn-node = { workspace = true }
narwhal-test-utils = { workspace = true }
tn-types = { workspace = true }
bytes = { workspace = true }
