[package]
name = "tn-executor"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steven Stanfield <steve@telcoin.org>",
    "Mysten Labs <build@mystenlabs.com>",
]
publish = false

[dependencies]
async-trait.workspace = true
fastcrypto.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tonic.workspace = true
tracing.workspace = true
prometheus.workspace = true
tn-storage = { workspace = true }
tn-network-types = { workspace = true }

tn-types = { workspace = true }
tn-config = { workspace = true }
tn-network = { workspace = true }
mockall.workspace = true

consensus-metrics.workspace = true
tn-primary = { workspace = true }
tn-primary-metrics = { workspace = true }
anemo = { workspace = true }

[dev-dependencies]
indexmap.workspace = true
tempfile.workspace = true
tn-primary = { workspace = true }
tn-node = { workspace = true }
tn-test-utils = { workspace = true }
bytes = { workspace = true }
