[package]
name = "lattice-common"
authors = ["Grant Kee <grant.kee@telco.in>", "Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
version.workspace = true
edition = "2021"
publish = false

[dependencies]
# 
tokio = { workspace = true, features = ["sync"] }
futures = "0.3.23"
parking_lot = "0.12.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "test-util"] }
