[package]
name = "lattice-macros"
version = "0.1.0"
authors = ["Grant Kee <grant.kee@telco.in>", "Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
lattice-proc-macros = { path = "../lattice-proc-macros" }
# 
once_cell = "1.16"
futures = "0.3"
tracing = "0.1.36"
