[package]
name = "lattice-proc-macros"
version = "0.1.0"
authors = ["Grant Kee <grant.kee@telco.in>", "Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full", "fold", "extra-traits"] }
# 
proc-macro2 = "1"

[target.'cfg(msim)'.dependencies]
msim-macros = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "f2c31421e273eca7e97c563c7e07b81b5afa2d3a", package = "msim-macros" }
