[package]
name = "mem-utils"
version.workspace = true
authors = [
    "Parity Technologies <admin@parity.io>",
    "Andrew Schran <aschran@mystenlabs.com>",
    "Grant Kee <grant.kee@telco.in>",
]
repository = "https://github.com/mystenlabs/mysten-infra"
description = "Collection of memory related utilities"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56.1"
publish = false

[dependencies]
cfg-if = { workspace = true }
hashbrown = { version = "0.12", optional = true }
mem-utils-derive = { workspace = true }
impl-trait-for-tuples = "0.2.0"
fastcrypto = { workspace = true }
fastcrypto-tbls = { workspace = true }
indexmap = { workspace = true }
roaring = { workspace = true }
ed25519-consensus = { version = "2.0.1" }
smallvec = { version = "1.10.0", optional = true }
parking_lot = { workspace = true, optional = true }
once_cell = { workspace = true }

[features]
default = ["std", "hashbrown", "smallvec", "estimate-heapsize"]
std = ["parking_lot"]
# Full estimate: no call to allocator
estimate-heapsize = []
