[package]
name = "narwhal-network-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors = [
    "Grant Kee <grant.kee@telco.in>",
    "Mysten Labs <build@mystenlabs.com>",
]
description = "Commonly used types in telcoin network's internal network communication."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tn-types = { workspace = true }
anemo = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
indexmap = { version = "1.9.2", features = ["serde"] }
roaring = "0.10.1"
mockall = "0.11.2"
bcs = "0.1.4"
bytes = "1.3.0"
tonic = { version = "0.8.2", features = ["transport"] }
snap = "1.1.0"

[build-dependencies]
rustversion = "1.0.9"
anemo-build.workspace = true
