[package]
name = "consensus-network-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steven Stanfield <steve@telcoin.org>",
    "Mysten Labs <build@mystenlabs.com>",
]
description = "Commonly used types in telcoin network's internal network communication."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tn-types = { workspace = true }
anemo = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
reth-primitives = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
roaring = { workspace = true }
mockall = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
tonic = { workspace = true, features = ["transport"] }
snap = "1.1.0"

[build-dependencies]
rustversion = "1.0.9"
anemo-build = { workspace = true }
