[package]
name = "lattice-network"
version.workspace = true
license = "Apache-2.0"
authors = ["Grant Kee <grant.kee@telco.in>", "Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = false

[dependencies]
dashmap = "5.4.0"
async-trait = "0.1.61"
backoff = { version = "0.4.0", features = ["tokio"] }
bytes = "1.3.0"
futures = "0.3.24"
parking_lot = "0.12.1"
quinn-proto = "^0.10.0"
prometheus = "0.13.3"
rand = { version = "0.8.5", features = ["small_rng"] }
tokio = { workspace = true, features = ["rt", "net", "sync", "macros", "time"] }
tracing = "0.1.36"
tn-types.workspace = true
tn-macros.workspace = true

lattice-common.workspace = true
consensus-metrics.workspace = true
tn-network-types = { workspace = true }

# 

anemo.workspace = true
anemo-tower.workspace = true
anyhow.workspace = true
axum.workspace = true
axum-server = "0.4.2"
tower = "0.4.13"

[dev-dependencies]
bincode = "1.3.3"
lattice-test-utils.workspace = true
